Fixed overflow-x issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -147,6 +147,7 @@ body {
   }
   .content-container {
   margin: 0 auto;
+  overflow-x: hidden;
 
   h1, h2 {
     display: none;
@@ -248,6 +249,7 @@ body {
 
   .product-container {
     margin-top: 152px;
+    overflow-x: hidden;
 
     h3 {
       font-size: 19px;
@@ -322,6 +324,7 @@ body {
   }
 
   .subscribe-container {
+    overflow-x: hidden;
     background-color: #ff0000;
     width: 100%;
     display: block;
